external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_at.exp
error[E03018]: invalud pattern
  ┌─ tests/move_2024/matching/invalid_at.move:9:13
  │
9 │             _ @ Option::Some(128u8) => (),
  │             ^ Can't use '_' as a binder in an '@' pattern

